# puzzles

./: .gitignore  LICENSE  README.md
2020/: README.md  requirements.txt
2020/01/: input2.py
2020/03/: solution.py  solution2.py
2020/04/: solution2.py
2020/05/: solution.py
2020/06/: solution.py
2020/07/: solution.py
2020/09/: solution.py  solution2.py
2020/10/: solution2.py
2020/11/: solution.py  solution1.py
2020/12/: solution.py  solution2.py
2020/13/: Input6.txt
2020/14/: solution2.py
2020/15/: solution.py  solution2.py  solution_test.py
2020/16/: solution2.py
2020/17/: solution.py
2020/19/: solution.py  solution2.py  solution4.py
2020/20/: solution2.py
2020/21/: solution.py  z3-solution.py
2020/23/: solution.py
2021/: Cargo.toml  Info.md  Info.txt  README.md
2021/src/: day03.rs  day04.rs  day06.rs  day07.rs  day08.rs  day15.rs  day17.rs  day18.rs  day19.rs  day21.rs  day21.txt  day23.rs  input8ex.txt  test.z3
2022/: README.md  go.mod
2022/cmd/aoc/: main.go
2022/internal/: day01_test.go  day03.go  day04_test.go  day06_test.go  day07.go  day07_test.go  day08.go  day09_test.go  day10.go  day12.go  day12_test.go  day13.go  day13_test.go  day14.go  day16.go  day16.py  day16_test.go  day18_test.go  day20_test.go  day21.go  day22.go  day22_test.go  day23.go  day24.go  day25.go  day25_test.go  functional.go  graph.go  set.go  set_test.go  shared.go
advent-of-code/2020/: README.md  pyproject.toml
advent-of-code/2020/01/: input1.py
advent-of-code/2020/02/: solution.py  solution2.py
advent-of-code/2020/04/: solution.py
advent-of-code/2020/08/: solution1.py  solution2.py
advent-of-code/2020/10/: solution.py
advent-of-code/2020/13/: solution1.py
advent-of-code/2020/14/: solution.py
advent-of-code/2020/16/: solution.py
advent-of-code/2020/17/: solution2.py
advent-of-code/2020/18/: solution.py  solution2.py
advent-of-code/2020/19/: solution3.py  test.py
advent-of-code/2020/20/: solution.py
advent-of-code/2020/22/: solution.py  solution2.py
advent-of-code/2020/23/: solution5.py
advent-of-code/2020/24/: solution.py
advent-of-code/2020/25/: solution.py
advent-of-code/2021/: Cargo.toml  README.md
advent-of-code/2021/.cargo/: config.toml
advent-of-code/2021/src/: day01.rs  day02.rs  day05.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day16.rs  day19.txt  day20.rs  day22.rs  day24.BAK.rs  day24.rs  day25.rs  input22ex3.txt
advent-of-code/2022/: README.md  go.sum
advent-of-code/2022/internal/: day01.go  day02.go  day03_test.go  day04.go  day05.go  day05_test.go  day06.go  day08_test.go  day09.go  day10_test.go  day11.go  day11_test.go  day14_test.go  day15.go  day15_test.go  day17.go  day17_test.go  day18.go  day19.go  day19_test.go  day20.go  day21_test.go  day23_test.go  day24_test.go  dayNN.go  dayNN_test.go  skip_list.go  skip_list_test.go  text.go
advent-of-code/2023/: .editorconfig  README.md  aoc2023.sln
advent-of-code/2023/src/aoc2023/: Library.fs  aoc2023.fsproj  day01.fs  day02.fs  day03.fs  day04.fs  day05.fs  day06.fs  day07.fs  day08.fs  day09.fs  day10.fs  day11.fs  day12.fs  dayNN.fs
advent-of-code/2023/src/main/: Program.fs  main.fsproj
google-foobar/: 1-2ab.html  2a-hey-i-already-did-that.py  2b-ion-flux-relabeling.py  3-prepare-the-bunnies-escape.py  3-prepare-the-bunnies-escape.txt  3-prepare-the-bunnies-escape1.py  3b-find-the-access-codes.py  3b-find-the-access-codes.txt  3c-bomb-baby.py  3c-bomb-baby.txt  4a-bring-a-gun-to-a-guard-fight.py  4a-bring-a-gun-to-a-guard-fight.txt  4b-free-the-bunny-prisoners.py  4b-free-the-bunny-prisoners.txt  5-disorderly-escape-decode.py  5-disorderly-escape.mht  5-disorderly-escape.py  5-disorderly-escape.txt  B1-dodge-the-lasers.py  B1-dodge-the-lasers.txt  B10-en-route-salute.py  B10-en-route-salute.txt  B11-gearing-up-for-destruction.py  B11-gearing-up-for-destruction.txt  B12-elevator-maintenance.py  B12-elevator-maintenance.txt  B13-power-hungry.py  B13-power-hungry.txt  B14-dont-get-volunteered.py  B14-dont-get-volunteered.txt  B15-lovely-lucky-lambs.py  B15-lovely-lucky-lambs.txt  B16-please-pass-the-coded-messages.py  B16-please-pass-the-coded-messages.txt  B17-numbers-station-coded-messages.py  B17-numbers-station-coded-messages.txt  B18-bunny-prisoners-locating.py  B18-bunny-prisoners-locating.txt  B19-minion-labor-shifts.py  B19-minion-labor-shifts.txt  (+27 more)
google-foobar/beta-rabbit/: minion-bored-games.txt  rabbit-test-subjects.py  rabbit-test-subjects.txt  save-beta-rabbit.py  save-beta-rabbit.txt  sort-names.py  sort-names.txt  zombit-monitoring.py  zombit-monitoring.txt
jane-street-puzzles/: Info.md  README.md  pyproject.toml
jane-street-puzzles/2024-05-number-cross-4/: README.md  number-cross-4.py  pyproject.toml
jane-street-puzzles/js_2024_05_number_cross_4/: README.md  __main__.py  number_cross_4.ods  number_cross_4.py  number_cross_4_test.py
jane-street-puzzles/js_2024_06_altered_states_2/: README.md  SometimeShuffle.py  __main__.py  as2.py  as2_test.py  sort_states.py  states.txt  states_sorted.txt
jane-street-puzzles/js_2024_08_tree_edge_triage/: README.md  __main__.py  tet.py
quantopian/: README.md  challenge_0.py  params_0.json  pyproject.toml  quantrank_problems.ipynb  t.py
