[project]
name = "jane-street-puzzles"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ajitnilakantan", email = "ajitnilakantan@users.noreply.github.com" }
]
dependencies = [
    "typing-extensions>=4.11.0",
    "keyboard>=0.13.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"js_2024_05_number_cross_4" = "js_2024_05_number_cross_4.__main__:main"
"nc4" = "js_2024_05_number_cross_4.number_cross_4:main"
"as2" = "js_2024_06_altered_states_2.__main__:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "mypy>=1.10.0",
    "types-keyboard>=0.13.2.20240310",
]

#[tool.rye.workspace]
#members = ["./js_*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["placeholder"]

[tool.ruff]
line-length = 150
lint.select = [
  "ANN",     # flake8-annotations
  #"D",       # pydocstyle
  "E",       # pycodestyle
  "F",       # Pyflakes
]
lint.ignore = [
  "F541",    # f-string without any placeholders
  "ANN101",  # Missing type annotation for `self` in method
]
