[project]
name = "quantopian"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ajitnilakantan", email = "ajitnilakantan@users.noreply.github.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "managed"
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mypy>=1.10.0",
    "pandas-stubs>=2.2.2.240514",
    "types-cffi>=1.16.0.20240331",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/quantopian"]

[dependency-groups]
lint = [
    "ruff>=0.9.6",
]
