[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = "Advent of Code 2020"
authors = ["ajitnilakantan <ajitnilakantan@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
