[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent-of-code-2020"
version = "0.1.0"
description = "Advent of Code 2020"
authors = [
  { name = "ajitnilakantan", email = "ajitnilakantan@users.noreply.github.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.13"
dependencies = [
    "numpy>=2.2",
    "scipy>=1.15",
]

[tool.uv]
python-preference = "managed"
managed = true
dev-dependencies = [
    "mypy>=1.15",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/2020"]

[dependency-groups]
lint = [
    "ruff>=0.11",
]
